objects/ScCollection_Log_Template__c.object
<CustomObject>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Source_System__c</fullName>
        <label>Source System</label>
        <referenceTo>collect__Source_System__c</referenceTo>
        <relationshipLabel>Log Templates</relationshipLabel>
        <relationshipName>Log_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScCollection_Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Template</label>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Templates</pluralLabel>
    <recordTypes>
        <fullName>ScCollection_Interaction_Log</fullName>
        <active>true</active>
        <label>Interaction Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>ScCollection_Manual_SMS</fullName>
        <active>true</active>
        <label>Manual SMS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>